# piper-phonemize

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yaml  build.yaml  main.yml  test.yml  wheels.yml
