[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp312-*"
skip = "cp312-musllinux*"

archs = ["x86_64"]
build-frontend = "build[uv]"

before-all = "cmake -B build -D CMAKE_INSTALL_PREFIX=install && cmake --build build --config Release && cmake --install build"

container-engine = "docker"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"


[tool.cibuildwheel.linux]
repair-wheel-command = """
    ORIG_PATH=$PATH && \
    ORIG_LD_LIBRARY_PATH=$LD_LIBRARY_PATH && \
    export LD_LIBRARY_PATH=$(pwd)/install/lib:$(pwd)/install/lib64:$(pwd)/lib/onnxruntime-linux-x64-1.14.1/lib:$LD_LIBRARY_PATH && \
    auditwheel repair --plat manylinux_2_28_x86_64 --wheel-dir {dest_dir} {wheel} && \
    export PATH=$ORIG_PATH && \
    export LD_LIBRARY_PATH=$ORIG_LD_LIBRARY_PATH
"""
